# Abu-Cowork

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
abu-browser-bridge/: package.json
abu-browser-bridge/src/: index.ts  tools.ts  wsServer.ts
abu-chrome-extension/: build.js  manifest.json  package-lock.json
builtin-skills/code-review/: SKILL.md
builtin-skills/create-skill/: SKILL.md
builtin-skills/deep-research/: SKILL.md
builtin-skills/summarize/: SKILL.md
builtin-skills/translate/: SKILL.md
builtin-skills/weekly-report/: SKILL.md
builtin-skills/write-article/: SKILL.md
docs/: Installation-Guide.md  Installation-Guide_EN.md  User-Guide.md  User-Guide_EN.md
docs/design/: im-channel-design.md
scripts/: copy-resources.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: computer_use.rs  feishu_ws.rs  lib.rs  sandbox.rs  window_info.rs
src/hooks/: useAutoScroll.ts  useFileDragDrop.ts
src/i18n/: types.ts
src/stores/: chatStore.test.ts  chatStore.ts  discoveryStore.ts  imChannelStore.ts  mcpStore.ts  scheduleStore.test.ts  scheduleStore.ts  scratchpadStore.ts  settingsStore.ts  storeVersions.test.ts  toastStore.ts  triggerStore.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: execution.ts  imChannel.ts  index.ts  schedule.ts  (+1 more)
website/: README.md  index.html  style.css
(+148 files in other folders)
